# abrp-dashboard

./: .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  app.py  calculations.py  elevation_grid.py  enrichment.py  parser.py  pyproject.toml  requirements-dev.txt  requirements.txt  settings.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
.streamlit/: config.toml
data/: sample_trip.xlsx  superchargers.json  us_elevation_grid.npz
docs/: architecture.md
scripts/: build_elevation_grid.py
tests/: conftest.py  test_calculations.py  test_elevation_grid.py  test_enrichment.py  test_parser.py
