[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abrp-dashboard"
version = "0.1.0"
description = "Streamlit dashboard for visualizing A Better Route Planner (ABRP) EV trip exports."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "jtspetersen" }]
keywords = ["ev", "tesla", "abrp", "route-planner", "streamlit", "dashboard"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Streamlit",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "streamlit>=1.32",
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.12",
    "openpyxl>=3.1",
    "plotly>=5.20",
    "pydeck>=0.8",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.5",
    "mypy>=1.8",
    "types-requests",
    "pre-commit>=3.5",
]

[project.urls]
Homepage = "https://github.com/jtspetersen/abrp-dashboard"
Repository = "https://github.com/jtspetersen/abrp-dashboard"
Issues = "https://github.com/jtspetersen/abrp-dashboard/issues"

[tool.setuptools]
# Flat layout — modules live at repo root alongside app.py.
py-modules = ["parser", "calculations", "enrichment", "elevation_grid", "settings"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Sensible defaults: pycodestyle errors/warnings, pyflakes, import ordering,
# pyupgrade rules. Omit the stricter rulesets (flake8-bugbear etc.) until
# we've got a cleanup pass ready — better to ship a clean baseline now
# and tighten later than to fail CI out of the gate.
select = ["E", "W", "F", "I", "UP"]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]  # tests may import after fixtures setup path

[tool.mypy]
python_version = "3.11"
# Start permissive. Tighten with `disallow_untyped_defs = true` once the
# codebase has full annotation coverage.
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
